hphp/test/zend/good/tests/classes/abstract_derived.php.expectf

Fatal error: Class derived contains an abstract method and must therefore be declared abstract in %s/abstract_derived.php on line 6
